# OATFLAKE

./: .gitignore  Info.plist  LICENSE  NOTICE.txt  README.md  analyze_csv_fields.py  api_client.py  app.py  config.json  debug_level_status.py  debug_url_cache.py  debug_url_storage.py  direct_run.py  process_level.py  pyproject.toml  requirements.txt  run.py  run_analysis.py  run_complete_processing.py  run_goal_extraction.py  server.py  setup.py  start.bat  start.sh  system_endpoints.py  test_rebuild.py  universal_table_example_restructured.json  vector_store_flow_analysis.py
api/: README.md  main.py
api/routes/: __init__.py  analysis_settings.py  auth.py  buckets.py  data.py  definitions.py  goals.py  knowledge.py  markdown.py  materials.py  methods.py  ngrok.py  ollama.py  openrouter.py  openrouter_models.py  projects.py  questions.py  resources.py  search.py  search_cache.py  slack.py  stats.py  system.py  tables.py  training.py
assets/: icon.icns
config/: ollama_config.json
nginx/: group-backend.conf
scripts/: README.md  process_knowledge.py
scripts/analysis/: README.md  __init__.py  change_detector.py  cleanup_manager.py  content_analyzer.py  content_extractor.py  content_fetcher.py  critical_content_processor.py  data_saver.py  enhanced_url_storage.py  extraction_utils.py  (+36 more)
settings/: model_settings.json
static/: README.md
templates/: index.html
test/: add_discover_urls_method.py  discover_urls_only.py  manual_analyze.py  process_knowledge.py  process_level_urls.py  test_openrouter.py  test_questions.py  test_supabase.py
tests/: benchmark_search_api_interface.py  inspect_embedding_cache.py
utils/: config.py
(+105 files in other folders)
